--- a/css/login.css
+++ b/css/login.css
@@ -20,7 +20,7 @@ body{
 }
 #logo{
     
-    background-image: url('/images/login/logo');
+    background-image: url('./images/login/logo');
     background-repeat: no-repeat;
    
     background-size: 100%;
