--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -25,7 +25,7 @@
     /* width: 4em; */
     height: 4em;
     /* border: 3px solid mediumorchid; */
-    background-image: url('/project/images/dashboard/logo');
+    background-image: url('../images/dashboard/logo');
     background-size: 100%;
     background-repeat: no-repeat;
     display: flex;
